kube-object/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: example-namespace
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80   
  type: LoadBalancer
